--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -19,4 +19,7 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
+
+    // play core
+    implementation "com.google.android.play:core:1.9.0"
 }
