--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -22,4 +22,7 @@ dependencies {
 
     // play core
     implementation "com.google.android.play:core:1.9.0"
+
+    // leak canary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 }
